--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+      <style>
+        body {
+            line-height: 1.4;
+            font-family: 'Roboto', sans-serif;
+        }
+      </style>
   </head>
   <body>
     <div id="app"></div>
