--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -11,7 +11,7 @@
       <style>
         body {
             line-height: 1.4;
-            font-family: 'Roboto', sans-serif;
+            font-family: "Roboto", sans-serif;
         }
       </style>
   </head>
